pin docker version and config

--- a/ansible/playbook/docker_ubuntu.yml
+++ b/ansible/playbook/docker_ubuntu.yml
@@ -8,23 +8,17 @@
 ---
 - hosts: all
   become: true
+
   tasks:
     - name: Install aptitude using apt
       apt: name=aptitude state=latest update_cache=yes force_apt_get=yes
 
-    - name: Install required system packages
-      apt: name={{ item }} state=latest update_cache=yes
-      loop: [ 'apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'python3-pip', 'virtualenv', 'python3-setuptools']
-
-    - name: Add Docker GPG apt Key
-      apt_key:
-        url: https://download.docker.com/linux/ubuntu/gpg
-        state: present
-
-    - name: Add Docker Repository
-      apt_repository:
-        repo: deb https://download.docker.com/linux/ubuntu bionic stable
-        state: present
-
-    - name: Update apt and install docker-ce
-      apt: update_cache=yes name=docker-ce state=latest
+  roles:
+    - role: "nickjj.docker"
+      tags: ["docker"]
+      docker__edition: "ce"
+      docker__channel: ["stable"]
+      docker__version: "5:18.09"
+      docker__users: ["{{ ansible_env.SUDO_USER | d('root') }}"]
+      docker__default_daemon_json: |
+        "log-driver": "journald"
