--- a/ansible/playbook/kubeadm_ubuntu.yml
+++ b/ansible/playbook/kubeadm_ubuntu.yml
@@ -27,3 +27,6 @@
         - kubelet 
         - kubeadm 
         - kubectl
+  - name: Disable SWAP since kubernetes can't work with swap enabled (1/2)
+    shell: |
+      swapoff -a
