--- a/ansible/playbook/aptitude.yaml
+++ b/ansible/playbook/aptitude.yaml
@@ -2,11 +2,9 @@
   become: true
 
   tasks:
-    - name: Update and upgrade apt packages
-      become: true 
-      apt:
-        upgrade: yes
-        update_cache: yes
-    - name: Install aptitude using apt
-      apt: name=aptitude state=latest update_cache=no force_apt_get=yes
-
+    - name: Install aptitude
+      package:
+        name: aptitude
+        state: present
+    - name: Update apt cache
+      command: aptitude update
