add retry todocker and kubeadm playbook

--- a/ansible/playbook/docker_ubuntu.yml
+++ b/ansible/playbook/docker_ubuntu.yml
@@ -11,6 +11,8 @@
   
   roles:
     - role: "nickjj.docker"
+      retries: 3
+      delay: 10
       tags: ["docker"]
       docker__edition: "ce"
       docker__channel: ["stable"]
